// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResetPassword renders a success message 1`] = `
<DocumentFragment>
  <div
    class="root"
  >
    <p
      class="lead"
    >
      Your password was changed. Please log in with your new password.
    </p>
  </div>
</DocumentFragment>
`;

exports[`ResetPassword renders an error message for a failed password reset 1`] = `
<DocumentFragment>
  <div
    class="error"
  >
    Could not reset password.
  </div>
</DocumentFragment>
`;

exports[`ResetPassword renders an error message for a missing token 1`] = `
<DocumentFragment>
  <div
    class="error"
  >
    Missing or invalid token.
  </div>
</DocumentFragment>
`;

exports[`ResetPassword renders the form 1`] = `
<DocumentFragment>
  <form
    class="root"
  >
    <p
      class="lead"
    >
      Please choose a new password to complete the password reset.
    </p>
    <div
      class="fields"
    >
      <div
        class="root"
      >
        <label>
          <span
            class="label"
          >
            <span
              class="requiredSymbol"
            />
            Email address
          </span>
        </label>
        <span
          class="root"
          style="--iconsBefore: 0; --iconsAfter: 0;"
        >
          <span
            class="input"
          >
            <input
              aria-label="email"
              autocomplete="email"
              class="input"
              id="20883b15-f25b-4dc2-866b-65d733806c22"
              name="email"
              value=""
            />
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          />
        </span>
        <p
          class="root"
        />
      </div>
      <div
        class="root"
      >
        <label>
          <span
            class="label"
          >
            <span
              class="requiredSymbol"
            />
            New Password
          </span>
        </label>
        <span
          class="root"
          style="--iconsBefore: 0; --iconsAfter: 0;"
        >
          <span
            class="input"
          >
            <input
              aria-label="password"
              autocomplete="new-password"
              class="input"
              id="260bf620-3e3d-4768-bfb5-79a93dd6ebfb"
              name="password"
              type="password"
              value=""
            />
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          />
        </span>
        <p
          class="root"
        />
      </div>
      <div
        class="root"
      >
        <label>
          <span
            class="label"
          >
            <span
              class="requiredSymbol"
            />
            Confirm new Password
          </span>
        </label>
        <span
          class="root"
          style="--iconsBefore: 0; --iconsAfter: 0;"
        >
          <span
            class="input"
          >
            <input
              aria-label="confirm"
              class="input"
              id="c8a6ad65-bd8e-4ecd-88f0-1bb7e0722235"
              name="confirm"
              type="password"
              value=""
            />
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          />
        </span>
        <p
          class="root"
        />
      </div>
    </div>
    <div
      class="submit"
    >
      <button
        aria-label="submit"
        class="root_highPriority"
        type="submit"
      >
        <span
          class="content"
        >
          Reset Password
        </span>
      </button>
    </div>
  </form>
</DocumentFragment>
`;
